# Pam

./: Audioslider.py  Digitales_TDR_Pam.py  PamsFunctions.py  PyQt.py  README.md  app.py  app2.py  app3.py  app4.py  app5.py  byte_sender.py  config.toml  definitions.py  hacker.py  hacker2.py  matlabdata.py  matload.py  multithread.py  pam.py  pam.spec  pams_functions.py  plot80k.py  pyproject.toml  setup.py  stylesheet_tester.py  test.py  to-do.txt  udp_trans_client.py
resources/: ADCdata.txt  FPGAdata.txt  Mainwindow.ui  audio_slider.ui  dataFPGA.mat  info.txt  magic_finder_dialogue.ui  pams_style.qss  test_data_2sets.csv  testui.ui
resources/RUB-Corporate-Design-Fonts/: README
resources/SpyBot/: SpyBot.qss
