[tool.poetry]
name = "matlabdata"
version = "0.1.0"
description = ""
authors = ["Aron Grabski"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
PyQt5 = '^5.15.9'
numpy = "^1.24.3"
pyqtgraph = "^0.13.3"
psutil = "^5.9.5"
scipy = "^1.10.1"
pyqt5-tools = "^5.15.9.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
