[tool.poetry]
name = "matlabdata"
version = "0.1.0"
description = ""
authors = ["Aron Grabski"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
numpy = "^1.24.3"
scipy = "^1.10.1"
PyQt5 = "^5.15.9"
psutil = "^5.9.5"
pyqtgraph = "^0.13.3"
pysine = "^0.9.2"
pyaudio = "^0.2.13"
pyqt6 = "^6.5.0"
sounddevice = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
