[tool.poetry]
name = "pam"
version = "0.1.0"
description = ""
authors = ["Aron Grabski <aron.grabski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
PyQt5 = "^5.15.9"
numpy = "^1.24.3"
scipy = "^1.10.1"
psutil = "^5.9.5"
pyqtgraph = "^0.13.3"
rtmixer = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
